--- a/src/app/account/login-register.component.html
+++ b/src/app/account/login-register.component.html
@@ -17,7 +17,7 @@
 					<h1>Create Account</h1>
 					<div class="social-container">
 						<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-						<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+						<a href="http://localhost:4000/auth/google" class="social"><i class="fab fa-google-plus-g"></i></a>
 					</div>
 					<span>or use your email for registration</span>
 
@@ -83,7 +83,7 @@
 					<h1>Sign In</h1>
 					<div class="social-container">
 						<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-						<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+						<a href="http://localhost:4000/auth/google" class="social"><i class="fab fa-google-plus-g"></i></a>
 					</div>
 					<span>or use your account</span>
 
