--- a/src/app/account/login-register.component.html
+++ b/src/app/account/login-register.component.html
@@ -5,7 +5,7 @@
 	<div class="sudlanan">
 		<!-- Centered Logo -->
 		<div class="logo-container">
-			<img src="assets/jb-symbol-logo.png" alt="Logo" class="center-logo">
+			<img src="assets/juanbayan-logo.png" alt="Logo" class="center-logo">
 		</div>
 
 		<div class="container" id="container" [ngClass]="{ 'right-panel-active': isRightPanelActive }">
@@ -100,6 +100,8 @@
 						<small>Password is required</small>
 					</div>
 
+				
+					
 
 					<a routerLink="/account/forgot-password">Forgot your password?</a>
 					<button type="submit">Sign In</button>
