--- a/src/app/admin/layout.component.html
+++ b/src/app/admin/layout.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div class="p-4">
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+</div>
