--- a/src/app/profile/update.component.html
+++ b/src/app/profile/update.component.html
@@ -1,58 +1,53 @@
-<h1>Update Profile</h1>
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="form-row">
-        <div class="form-group col-5">
-            <label>First Name</label>
-            <input type="text" formControlName="acc_firstname" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.acc_firstname.errors }" />
-            <div *ngIf="submitted && f.acc_firstname.errors" class="invalid-feedback">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<div class="container mt-5">
+    <h1>Update Profile </h1>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <div class="form-row">
+            <div class="form-group col-5">
+                <label>First Name</label>
+                <input type="text" formControlName="acc_firstname" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.acc_firstname.errors }" />
+                <div *ngIf="submitted && f.acc_firstname.errors" class="invalid-feedback"></div>
+            </div>
+            <div class="form-group col-5">
+                <label>Last Name</label>
+                <input type="text" formControlName="acc_lastname" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.acc_lastname.errors }" />
+                <div *ngIf="submitted && f.acc_lastname.errors" class="invalid-feedback"></div>
             </div>
         </div>
-        <div class="form-group col-5">
-            <label>Last Name</label>
-            <input type="text" formControlName="acc_lastname" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.acc_lastname.errors }" />
-            <div *ngIf="submitted && f.acc_lastname.errors" class="invalid-feedback">
+        <div class="form-group">
+            <label>Contact Number</label>
+            <input type="text" formControlName="acc_pnumber" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.acc_pnumber.errors }" />
+            <div *ngIf="submitted && f.acc_pnumber.errors" class="invalid-feedback">
+                <div *ngIf="f.acc_pnumber.errors.pattern">Contact Number must be a valid phone number</div>
             </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label>Contact Number</label>
-        <input type="text" formControlName="acc_pnumber" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.acc_pnumber.errors }" />
-        <div *ngIf="submitted && f.acc_pnumber.errors" class="invalid-feedback">
-            <div *ngIf="f.acc_pnumber.errors.pattern">Contact Number must be a valid phone number</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label>Email</label>
-        <input type="text" formControlName="acc_email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.acc_email.errors }" />
-        <div *ngIf="submitted && f.acc_email.errors" class="invalid-feedback">
-            <div *ngIf="f.acc_email.errors.email">Email must be a valid email address</div>
-        </div>
-    </div>
-    <h3 class="pt-3">Change Password</h3>
-    <p>Leave blank to keep the same password</p>
-    <div class="form-row">
-        <div class="form-group col">
-            <label>Password</label>
-            <input type="password" formControlName="acc_passwordHash" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.acc_passwordHash.errors }" />
-            <div *ngIf="submitted && f.acc_passwordHash.errors" class="invalid-feedback">
-                <div *ngIf="f.acc_passwordHash.errors.minlength">Password must be at least 6 characters</div>
+        
+        <h3 class="pt-3">Change Password</h3>
+        <p>Leave blank to keep the same password</p>
+        <div class="form-row">
+            <div class="form-group col">
+                <label>Password</label>
+                <input type="password" formControlName="acc_passwordHash" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.acc_passwordHash.errors }" />
+                <div *ngIf="submitted && f.acc_passwordHash.errors" class="invalid-feedback">
+                    <div *ngIf="f.acc_passwordHash.errors.minlength">Password must be at least 6 characters</div>
+                </div>
+            </div>
+            <div class="form-group col">
+                <label>Confirm Password</label>
+                <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
+                <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
+                    <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
+                    <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
+                </div>
             </div>
         </div>
-        <div class="form-group col">
-            <label>Confirm Password</label>
-            <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
-            <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
-                <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
-                <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
-            </div>
+        <div class="form-group">
+            <button type="submit" [disabled]="loading" class="btn btn-primary mr-2">
+                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                Update
+            </button>
+            <a routerLink="../" href="" class="btn btn-link">Cancel</a>
         </div>
-    </div>
-    <div class="form-group">
-        <button type="submit" [disabled]="loading" class="btn btn-primary mr-2">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-            Update
-        </button> 
-        <!--Deleting DELETE BUTTON TO AVOID SELF DESTRUCT-->
-        <a routerLink="../" href="" class="btn btn-link">Cancel</a>
-    </div>
-</form>
+    </form>
+</div>
